adaptive for iphone xs/iphone 7

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </p>
           </div>
           <img src="assets/svg/Столб.svg" alt="xyz" class="pole" />
+          <img src="assets/svg/Столб.svg" alt="xyz" class="pole2" />
         </div>
         <div class="dani_photo">
           <img src="assets/img/Photo.png" alt="puk" />
