--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       rel="stylesheet"
     />
     <title>Danila's Cut</title>
+    <meta
+      name="google-site-verification"
+      content="5k-kexE3omhiXUGyupnv20OHlLHTv1UDe3UGgvC-lo0"
+    />
   </head>
   <body>
     <div class="header">
