--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       </div>
     </div>
     <div class="galary_image swiper-container">
+      <div class="shadow"></div>
       <div class="swiper-wrapper">
         <div class="galary_cont swiper-slide">
           <div class="galary__foto">
