--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         </h4>
       </div>
     </div>
-    <div class="button"><a href="https://n854555.yclients.com/">Запись</a></div>
+    <div class="button">
+      <a href="https://b187310.yclients.com/company/189468/unavailable?o="
+        >Запись</a
+      >
+    </div>
     <div class="info">
       <div class="info_wrapper">
         <div class="info_text">
@@ -182,18 +186,15 @@
       <img class="shave_icons" src="assets/svg/Shave2.svg" alt="404" />
       <div class="footer_content">
         <div class="icons">
-          <img
-            src="assets/svg/1221588_media_logo_social_whatsapp.svg"
-            alt="404"
-          />
-          <img
-            src="assets/svg/734382_pinterest_media_social_online.svg"
-            alt="404"
-          />
-          <img
-            src="assets/svg/734395_instagram_media_online_photo_social.svg"
-            alt="404"
-          />
+          <a href="https://печатныймастер.рус/page6523752.html"
+            ><img src="/assets/img/vk-64.png" alt="404"
+          /></a>
+          <a href="https://www.instagram.com/blvck_dani_/"
+            ><img src="/assets/img/instagram-64.png" alt=""
+          /></a>
+          <a href="https://web.telegram.org/k/#@Blvck_dani"
+            ><img src="/assets/img/telegram-64.png" alt=""
+          /></a>
         </div>
         <span class="telegram">@Blvck_dani</span>
         <a href="tel">+7-912-313-76-35</a>
