--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <a href="https://www.instagram.com/blvck_dani_/"
             ><img src="/assets/img/instagram-64.png" alt=""
           /></a>
-          <a href="https://web.telegram.org/k/#@Blvck_dani"
+          <a href="https://t.me/Blvck_dani"
             ><img src="/assets/img/telegram-64.png" alt=""
           /></a>
         </div>
