--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
             </p>
           </div>
           <img src="assets/svg/Столб.svg" alt="xyz" class="pole" />
-          <img src="assets/svg/Столб.svg" alt="xyz" class="pole2" />
         </div>
-        <div class="dani_photo">
-          <img src="assets/img/Photo.png" alt="puk" />
+        <div class="mobile_wrapper">
+          <img src="assets/svg/Столб.svg" alt="xyz" class="pole2" />
+          <div class="dani_photo">
+            <!-- <img src="assets/img/Photo.png" alt="puk" /> -->
+          </div>
+          <img src="assets/svg/Столб.svg" alt="xyz" class="pole3" />
         </div>
         <script>
           var items = $("h4, p, img");
