--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="container header_container">
         <img src="assets/svg/logo.svg" alt="pupa" class="logo" />
         <h4 class="header_text">
-          Трудное будет сделано немедленно,<br />невозможное потребует чуть
-          больше времени.
+          Создаю стильные мужские стрижки, <br />
+          делаю свою работу хорошо и качественно.
         </h4>
       </div>
     </div>
@@ -41,11 +41,11 @@
           <div class="info_text_box">
             <h4>Привет! Меня зовут <span>Данила</span></h4>
             <p>
-              Приятно, граждане, наблюдать, как стремящиеся вытеснить
-              традиционное производство, нанотехнологии призывают нас к новым
-              свершениям, которые, в свою очередь, должны быть смешаны с не
-              уникальными данными до степени совершенной неузнаваемости, из-за
-              чего возрастает их статус бесполезности.
+              Мой путь барбера начался в 2014 году в городе Казани. Там я пол
+              года оттачивал свое мастерство в Лондонской академии в технике
+              vidal Sassoon. А затем я повышал квалификацию в британской школе
+              TONI&GUY. Это совершенно разные школы, но именно это и позволяет
+              мне подходить к стрижке каждого клиента индивидуально.
             </p>
           </div>
           <img src="assets/svg/Столб.svg" alt="xyz" class="pole" />
@@ -67,10 +67,9 @@
             <img src="assets/img/Rectangle 19.png" alt="" />
           </div>
           <div class="galary__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            in scelerisque enim. Sed rutrum laoreet tortor, quis molestie leo
-            fermentum a. Nullam at elit tellus. Ut pellentesque suscipit arcu,
-            ut pellentesque nunc congue sed
+            Я разбираюсь во всех классических и неординарных стрижках. Я знаю,
+            как должен выглядеть мужчина конкретного типажа, учитывая его образ
+            жизни, привычки, вкусы.
           </div>
         </div>
         <div class="galary_cont swiper-slide">
@@ -78,10 +77,7 @@
             <img src="assets/img/Rectangle 24.png" alt="" />
           </div>
           <div class="galary__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            in scelerisque enim. Sed rutrum laoreet tortor, quis molestie leo
-            fermentum a. Nullam at elit tellus. Ut pellentesque suscipit arcu,
-            ut pellentesque nunc congue sed
+            Я вижу лучший образ и могу создать его на профессиональном уровне.
           </div>
         </div>
         <div class="galary_cont swiper-slide">
@@ -89,10 +85,8 @@
             <img src="assets/img/Rectangle 20.png" alt="" />
           </div>
           <div class="galary__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            in scelerisque enim. Sed rutrum laoreet tortor, quis molestie leo
-            fermentum a. Nullam at elit tellus. Ut pellentesque suscipit arcu,
-            ut pellentesque nunc congue sed
+            Моя работа требует минимум укладочных средств. Клиент может без
+            особых усилий и тонны стайлинга сделать укладку, как в салоне.
           </div>
         </div>
         <div class="galary_cont swiper-slide">
@@ -100,76 +94,14 @@
             <img src="assets/img/Rectangle 21.png" alt="" />
           </div>
           <div class="galary__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            in scelerisque enim. Sed rutrum laoreet tortor, quis molestie leo
-            fermentum a. Nullam at elit tellus. Ut pellentesque suscipit arcu,
-            ut pellentesque nunc congue sed
+            Я помню о клиенте все до мельчайших подробностей, форма головы,
+            особенности структуры волоса и его пожелания. А хорошая стрижка и
+            ухоженный вид - залог любого успешного мужчины.
           </div>
         </div>
         <div class="galary_cont swiper-slide">
           <div class="galary__foto">
             <img src="assets/img/Rectangle 20.png" alt="" />
-          </div>
-          <div class="galary__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            in scelerisque enim. Sed rutrum laoreet tortor, quis molestie leo
-            fermentum a. Nullam at elit tellus. Ut pellentesque suscipit arcu,
-            ut pellentesque nunc congue sed
-          </div>
-        </div>
-        <div class="galary_cont swiper-slide">
-          <div class="galary__foto">
-            <img src="assets/img/Rectangle 21.png" alt="" />
-          </div>
-          <div class="galary__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            in scelerisque enim. Sed rutrum laoreet tortor, quis molestie leo
-            fermentum a. Nullam at elit tellus. Ut pellentesque suscipit arcu,
-            ut pellentesque nunc congue sed
-          </div>
-        </div>
-        <div class="galary_cont swiper-slide">
-          <div class="galary__foto">
-            <img src="assets/img/Rectangle 19.png" alt="" />
-          </div>
-          <div class="galary__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            in scelerisque enim. Sed rutrum laoreet tortor, quis molestie leo
-            fermentum a. Nullam at elit tellus. Ut pellentesque suscipit arcu,
-            ut pellentesque nunc congue sed
-          </div>
-        </div>
-        <div class="galary_cont swiper-slide">
-          <div class="galary__foto">
-            <img src="assets/img/Rectangle 19.png" alt="" />
-          </div>
-          <div class="galary__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            in scelerisque enim. Sed rutrum laoreet tortor, quis molestie leo
-            fermentum a. Nullam at elit tellus. Ut pellentesque suscipit arcu,
-            ut pellentesque nunc congue sed
-          </div>
-        </div>
-        <div class="galary_cont swiper-slide">
-          <div class="galary__foto">
-            <img src="assets/img/Rectangle 19.png" alt="" />
-          </div>
-          <div class="galary__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            in scelerisque enim. Sed rutrum laoreet tortor, quis molestie leo
-            fermentum a. Nullam at elit tellus. Ut pellentesque suscipit arcu,
-            ut pellentesque nunc congue sed
-          </div>
-        </div>
-        <div class="galary_cont swiper-slide">
-          <div class="galary__foto">
-            <img src="assets/img/Rectangle 19.png" alt="" />
-          </div>
-          <div class="galary__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-            in scelerisque enim. Sed rutrum laoreet tortor, quis molestie leo
-            fermentum a. Nullam at elit tellus. Ut pellentesque suscipit arcu,
-            ut pellentesque nunc congue sed
           </div>
         </div>
       </div>
@@ -184,13 +116,13 @@
       <div class="footer_content">
         <div class="icons">
           <a href="https://печатныймастер.рус/page6523752.html"
-            ><img src="/assets/img/vk-64.png" alt="404"
+            ><img src="/assets/img/whatsapp-64.png" alt="404"
           /></a>
           <a href="https://www.instagram.com/blvck_dani_/"
-            ><img src="/assets/img/instagram-64.png" alt=""
+            ><img src="/assets/img/instagram-64.png" alt="404"
           /></a>
           <a href="https://t.me/Blvck_dani"
-            ><img src="/assets/img/telegram-64.png" alt=""
+            ><img src="/assets/img/telegram-64.png" alt="404"
           /></a>
         </div>
         <span class="telegram">@Blvck_dani</span>
