--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="swiper-wrapper">
         <div class="galary_cont swiper-slide">
           <div class="galary__foto">
-            <img src="assets/img/Rectangle 19.png" alt="" />
+            <img src="assets/img/" alt="" />
           </div>
           <div class="galary__text">
             Я разбираюсь во всех классических и неординарных стрижках. Я знаю,
