--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="swiper-wrapper">
         <div class="galary_cont swiper-slide">
           <div class="galary__foto">
-            <img src="assets/img/" alt="" />
+            <img src="assets/img/photo_3.png" alt="" />
           </div>
           <div class="galary__text">
             Я разбираюсь во всех классических и неординарных стрижках. Я знаю,
@@ -74,7 +74,7 @@
         </div>
         <div class="galary_cont swiper-slide">
           <div class="galary__foto">
-            <img src="assets/img/Rectangle 24.png" alt="" />
+            <img src="assets/img/photo_4" alt="" />
           </div>
           <div class="galary__text">
             Я вижу лучший образ и могу создать его на профессиональном уровне.
@@ -82,7 +82,7 @@
         </div>
         <div class="galary_cont swiper-slide">
           <div class="galary__foto">
-            <img src="assets/img/Rectangle 20.png" alt="" />
+            <img src="assets/img/Rectangle 21" alt="" />
           </div>
           <div class="galary__text">
             Моя работа требует минимум укладочных средств. Клиент может без
@@ -91,17 +91,12 @@
         </div>
         <div class="galary_cont swiper-slide">
           <div class="galary__foto">
-            <img src="assets/img/Rectangle 21.png" alt="" />
+            <img src="assets/img/photo_1.png" alt="" />
           </div>
           <div class="galary__text">
             Я помню о клиенте все до мельчайших подробностей, форма головы,
             особенности структуры волоса и его пожелания. А хорошая стрижка и
             ухоженный вид - залог любого успешного мужчины.
-          </div>
-        </div>
-        <div class="galary_cont swiper-slide">
-          <div class="galary__foto">
-            <img src="assets/img/Rectangle 20.png" alt="" />
           </div>
         </div>
       </div>
