--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="galary_cont swiper-slide">
           <div class="galary__foto">
-            <img src="assets/img/photo_4" alt="" />
+            <img src="assets/img/photo_4.png" alt="кек" />
           </div>
           <div class="galary__text">
             Я вижу лучший образ и могу создать его на профессиональном уровне.
@@ -82,7 +82,7 @@
         </div>
         <div class="galary_cont swiper-slide">
           <div class="galary__foto">
-            <img src="assets/img/Rectangle 21" alt="" />
+            <img src="assets/img/Rectangle 21.png" alt="" />
           </div>
           <div class="galary__text">
             Моя работа требует минимум укладочных средств. Клиент может без
@@ -121,7 +121,7 @@
           /></a>
         </div>
         <span class="telegram">@Blvck_dani</span>
-        <a href="tel">+7-912-313-76-35</a>
+        <a href="tel">+7-999-155-16-34</a>
       </div>
       <img class="shave_icons" src="assets/svg/Shave.svg" alt="404" />
     </div>
