--- a/index.html
+++ b/index.html
@@ -103,8 +103,16 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
+
     <div class="shave_block">
       <img src="assets/svg/text_logo.svg" alt="" class="shave_logo" />
+      <script
+        id="map"
+        type="text/javascript"
+        charset="utf-8"
+        async
+        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af7364f364fcfb65757dd6a3e511a5fafaf924c639ac975c2c733195d78eb2ad9&amp;&amp;lang=ru_RU&amp;scroll=true"
+      ></script>
     </div>
     <div class="footer">
       <img class="shave_icons" src="assets/svg/Shave2.svg" alt="404" />
