--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       </div>
     </div>
 
-    <div class="button">
+    <!-- <div class="button">
       <a href="https://b187310.yclients.com/company/189468/unavailable?o="
         >Запись</a
       >
-    </div>
+    </div> -->
     <div class="info">
       <div class="info_wrapper">
         <div class="info_text">
@@ -41,8 +41,8 @@
           <div class="info_text_box">
             <h4>Привет! Меня зовут <span>Данила</span></h4>
             <p>
-              Мой путь барбера начался в 2014 году в городе Казани. Там я пол
-              года оттачивал свое мастерство в Лондонской академии в технике
+              Мой путь барбера начался в 2014 году в городе Казани. Там я
+              полгода оттачивал свое мастерство в Лондонской академии в технике
               vidal Sassoon. А затем я повышал квалификацию в британской школе
               TONI&GUY. Это совершенно разные школы, но именно это и позволяет
               мне подходить к стрижке каждого клиента индивидуально.
@@ -133,5 +133,10 @@
       </div>
       <img class="shave_icons" src="assets/svg/Shave.svg" alt="404" />
     </div>
+    <script
+      type="text/javascript"
+      src="https://w187310.yclients.com/widgetJS"
+      charset="UTF-8"
+    ></script>
   </body>
 </html>
