--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <div class="header">
+      <div class="bg-ios__back"></div>
       <div class="container header_container">
         <img src="assets/svg/logo.svg" alt="pupa" class="logo" />
         <h4 class="header_text">
