--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
       </div>
     </div>
 
-    <!-- <div class="button">
-      <a href="https://b187310.yclients.com/company/189468/unavailable?o="
-        >Запись</a
-      >
-    </div> -->
     <div class="info">
       <div class="info_wrapper">
         <div class="info_text">
@@ -55,9 +50,7 @@
         </div>
         <div class="mobile_wrapper">
           <img src="assets/svg/Столб.svg" alt="xyz" class="pole2" />
-          <div class="dani_photo">
-            <!-- <img src="assets/img/Photo.png" alt="puk" /> -->
-          </div>
+          <div class="dani_photo"></div>
           <img src="assets/svg/Столб.svg" alt="xyz" class="pole3" />
         </div>
       </div>
@@ -106,7 +99,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
-
     <div class="shave_block">
       <img src="assets/svg/text_logo.svg" alt="" class="shave_logo" />
       <script
