--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <img class="shave_icons" src="assets/svg/Shave2.svg" alt="404" />
       <div class="footer_content">
         <div class="icons">
-          <a href="https://печатныймастер.рус/page6523752.html"
+          <a href="https://wa.me/79991551634"
             ><img src="/assets/img/whatsapp-64.png" alt="404"
           /></a>
           <a href="https://www.instagram.com/blvck_dani_/"
@@ -124,7 +124,7 @@
           /></a>
         </div>
         <span class="telegram">@Blvck_dani</span>
-        <a href="tel">+7-999-155-16-34</a>
+        <a href="tel: +79991551634">+7-999-155-16-34</a>
       </div>
       <img class="shave_icons" src="assets/svg/Shave.svg" alt="404" />
     </div>
