--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <script src="https://cdn.jsdelivr.net/npm/jarallax@2/dist/jarallax.min.js"></script>
     <title>Danila's Cut</title>
   </head>
   <body>
@@ -31,7 +30,11 @@
         </h4>
       </div>
     </div>
-
+    <!-- <div class="button">
+      <a href="https://b187310.yclients.com/company/189468/unavailable?o="
+        >Запись</a
+      >
+    </div> -->
     <div class="info">
       <div class="info_wrapper">
         <div class="info_text">
@@ -50,7 +53,9 @@
         </div>
         <div class="mobile_wrapper">
           <img src="assets/svg/Столб.svg" alt="xyz" class="pole2" />
-          <div class="dani_photo"></div>
+          <div class="dani_photo">
+            <!-- <img src="assets/img/Photo.png" alt="puk" /> -->
+          </div>
           <img src="assets/svg/Столб.svg" alt="xyz" class="pole3" />
         </div>
       </div>
@@ -95,10 +100,86 @@
             ухоженный вид - залог любого успешного мужчины.
           </div>
         </div>
+        <div class="galary_cont swiper-slide">
+          <div class="galary__foto">
+            <img src="assets/img/photo_3.png" alt="" />
+          </div>
+          <div class="galary__text">
+            Я разбираюсь во всех классических и неординарных стрижках. Я знаю,
+            как должен выглядеть мужчина конкретного типажа, учитывая его образ
+            жизни, привычки, вкусы.
+          </div>
+        </div>
+        <div class="galary_cont swiper-slide">
+          <div class="galary__foto">
+            <img src="assets/img/photo_4.png" alt="кек" />
+          </div>
+          <div class="galary__text">
+            Я вижу лучший образ и могу создать его на профессиональном уровне.
+          </div>
+        </div>
+        <div class="galary_cont swiper-slide">
+          <div class="galary__foto">
+            <img src="assets/img/Rectangle 21.png" alt="" />
+          </div>
+          <div class="galary__text">
+            Моя работа требует минимум укладочных средств. Клиент может без
+            особых усилий и тонны стайлинга сделать укладку, как в салоне.
+          </div>
+        </div>
+        <div class="galary_cont swiper-slide">
+          <div class="galary__foto">
+            <img src="assets/img/photo_1.png" alt="" />
+          </div>
+          <div class="galary__text">
+            Я помню о клиенте все до мельчайших подробностей, форма головы,
+            особенности структуры волоса и его пожелания. А хорошая стрижка и
+            ухоженный вид - залог любого успешного мужчины.
+          </div>
+        </div>
+        <div class="galary_cont swiper-slide">
+          <div class="galary__foto">
+            <img src="assets/img/photo_3.png" alt="" />
+          </div>
+          <div class="galary__text">
+            Я разбираюсь во всех классических и неординарных стрижках. Я знаю,
+            как должен выглядеть мужчина конкретного типажа, учитывая его образ
+            жизни, привычки, вкусы.
+          </div>
+        </div>
+        <div class="galary_cont swiper-slide">
+          <div class="galary__foto">
+            <img src="assets/img/photo_4.png" alt="кек" />
+          </div>
+          <div class="galary__text">
+            Я вижу лучший образ и могу создать его на профессиональном уровне.
+          </div>
+        </div>
+        <div class="galary_cont swiper-slide">
+          <div class="galary__foto">
+            <img src="assets/img/Rectangle 21.png" alt="" />
+          </div>
+          <div class="galary__text">
+            Моя работа требует минимум укладочных средств. Клиент может без
+            особых усилий и тонны стайлинга сделать укладку, как в салоне.
+          </div>
+        </div>
+        <div class="galary_cont swiper-slide">
+          <div class="galary__foto">
+            <img src="assets/img/photo_1.png" alt="" />
+          </div>
+          <div class="galary__text">
+            Я помню о клиенте все до мельчайших подробностей, форма головы,
+            особенности структуры волоса и его пожелания. А хорошая стрижка и
+            ухоженный вид - залог любого успешного мужчины.
+          </div>
+        </div>
       </div>
+      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
+
     <div class="shave_block">
       <img src="assets/svg/text_logo.svg" alt="" class="shave_logo" />
       <script
@@ -113,7 +194,7 @@
       <img class="shave_icons" src="assets/svg/Shave2.svg" alt="404" />
       <div class="footer_content">
         <div class="icons">
-          <a href="https://wa.me/79991551634"
+          <a href="https://печатныймастер.рус/page6523752.html"
             ><img src="/assets/img/whatsapp-64.png" alt="404"
           /></a>
           <a href="https://www.instagram.com/blvck_dani_/"
@@ -124,7 +205,7 @@
           /></a>
         </div>
         <span class="telegram">@Blvck_dani</span>
-        <a href="tel: +79991551634">+7-999-155-16-34</a>
+        <a href="tel">+7-999-155-16-34</a>
       </div>
       <img class="shave_icons" src="assets/svg/Shave.svg" alt="404" />
     </div>
